--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,20 @@
 page-home {
+    h3{
+        text-align: center;
+        font-size: 40px;
+    }
+
+    img {
+        width: 200px;
+        height: 180px;;
+        align-self: center;
+        margin: auto;
+        display: block;
+        padding: 10px;
+    }
+
+    .buttons {
+        text-align: center;
+    }
 
 }
