--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" (ionOpen)="getMenuOptions()">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
